--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -196,7 +196,7 @@
 </div>
 </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
 <div style="margin:2em 0;">
-<span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/topic/21888-emby-for-kodi-liv-stable/" target="_blank" class="g-btn color_primary type_raised"><span>Learn More</span><span class="ripple-container"></span></a></span>
+<span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/21888-emby-for-kodi-liv-stable/" target="_blank" class="g-btn color_primary type_raised"><span>Learn More</span><span class="ripple-container"></span></a></span>
 
 </div>
 <div class="g-cols wpb_row offset_wide"><div class="full-width">
