--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -451,10 +451,12 @@
                                 <div class="wpb_wrapper">
 
                                     <div style="margin:0 auto;max-width:450px;">
-                                        <h2>Installation</h2>
+                                        <h2>Download</h2>
                                         <p>
-                                            <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/release/setup.exe">Stable Release</a>
-                                            <br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/beta/setup.exe">Beta Channel</a>
+											<div>
+											<a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/release/setup.exe" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a>
+                                            </div>
+											<br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/beta/setup.exe">Beta Channel</a>
                                             <br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/dev/setup.exe">Dev Channel (Unstable)</a>
                                         </p>
                                         <p>
@@ -469,7 +471,7 @@
                                 <div class="wpb_wrapper">
 
                                     <h4>Resources</h4>
-                                    <span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/forum/53-windowsgeneral" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/forum/53-windowsgeneral" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                     <div>
                                         <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
                                     </div>
