add apple tv page

--- a/src/emby-for-appletv.html
+++ b/src/emby-for-appletv.html
@@ -171,7 +171,7 @@
 	<div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
 				<div class="l-submain-h g-html i-cf">
 			<div class="w-pagehead">
-				<h1>Emby for Android TV</h1>
+				<h1>Emby for Apple TV</h1>
 												<div class="w-pagehead-nav">
 					<div class="w-pagehead-nav-h">
 											<a class="w-pagehead-nav-item type_prev" href="emby-web-client.html" title="Emby Web Client"><i class="mdfi_navigation_chevron_left"></i></a>
@@ -185,9 +185,12 @@
 	<div class="wpb_text_column ">
 		<div class="wpb_wrapper">
 			
-<h2>What you want to watch – right up front</h2>
-<p>Designed with with typical usage in mind, you won’t have to go hunting through your library to find the content you are most likely wanting to watch right now. The home screen shows you the items you were watching but hadn’t finished, your latest un-watched movies, the next episode of all your current TV shows and what’s on Live TV right now.</p>
-<p><img src="resources/5537f5f940bcb_firehome21.png"></p>
+
+<h2><span>Available NOW in the App store on your 4th Gen Apple TV</span></h2><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016b25001ab_DeviceHome.png' alt='Po
+
+
+sted Image' /></span></p><p>&nbsp;</p><p><p class='bbc_center'>Access all<sup class='bbc'><span style='font-size: 12px'>*</span></sup> of your Emby media now from your Apple TV device.</p></p><p>&nbsp;</p><p><span style='font-size: 18px'><span style='font-size: 24px'>Supports Your Favorite Emby Features:</span></span><ul class='bbc'><li><strong class='bbc'>Movies</strong> - Complete with support for Emby <em class='bbc'>Cinema Mode</em></li><li><strong class='bbc'>TV</strong> - Manage your binge watching like a pro with automatic next episode queueing and quick access to subsequent episodes right from the TV Series and Episode pages</li><li><strong class='bbc'>Music</strong> - Full support for playlists, instant mix, artists and albums</li><li><strong class='bbc'>Cover Art</strong> Plug-in - Add your own personal touch to your images with custom treatments and overlays</li><li><strong class='bbc'>Photos</strong> and more from the smart, beautiful and intuitive interface of the Apple TV 4.</li></ul></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016ba800b2d_Home.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span style='font-size: 18px'>Find what you want quickly and easily with a smart home screen design as well as individualized displays for each media type. Or use the full search capabilities including voice dictation <span style='font-size: 12px'>(requires tvOS 9.2)</span>.</span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c3ac0ccf_TV.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c52ab533_AllMovies.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016c7c2a846_Moviedetail3.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016caa49efb_SeriesDetail.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cd7146d1_Music.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016cfa1c56e_Album.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p><span rel='lightbox'><img class='bbc_img' src='http://emby.media/community/uploads/inline/3/57016e3c76876_Photos.png' alt='Posted Image' /></span></p><p>&nbsp;</p><p>* Live TV not yet supported</p>
+
 
 		</div> 
 	</div> </div><div class="one-third">
@@ -195,25 +198,14 @@
 		<div class="wpb_wrapper">
 			
 <h3>Download</h3>
-<p>Emby for Android TV is available in the Google Play Store.</p>
-<div>
-<a href="https://play.google.com/store/apps/details?id=tv.emby.embyatv" target="_blank"><img class="alignnone size-medium wp-image-5449" src="resources/playsstore-300x98.png" alt="playsstore" style="max-height:54px;"></a></div>
+<p>Emby for Apple TV is available in the tvOS app store.</p>
 
 		</div> 
 	</div> </div></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide"><div class="full-width">
 	<div class="wpb_text_column ">
 		<div class="wpb_wrapper">
 			
-<h2 style="margin-top:1em;">Fast, easy browsing</h2>
-<p>For those times you do want to peruse your library, Emby for Fire TV makes it a breeze. Providing several ways to traverse your content and rich search capability, you’ll find what you’re looking for in no time.</p>
-<div id="gallery_408676" class="w-gallery columns_2 type_masonry with_indents animate_revealgrid"> <div class="w-gallery-tnails" style="position: relative; height: 711px;"><a class="w-gallery-tnail order_1 animate_reveal" href="resources/atv1.png" title="atv1" style="position: absolute; left: 0px; top: 0px;"><img width="600" height="371" src="resources/atv1-600x371.png" class="w-gallery-tnail-img" alt="atv1"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_2 animate_reveal" href="resources/atv2.png" title="atv2" style="position: absolute; left: 572px; top: 0px;"><img width="600" height="372" src="resources/atv2-600x372.png" class="w-gallery-tnail-img" alt="atv2"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_3 animate_reveal" href="resources/atv3.png" title="atv3" style="position: absolute; left: 0px; top: 355px;"><img width="600" height="372" src="resources/atv3-600x372.png" class="w-gallery-tnail-img" alt="atv3"><span class="w-gallery-tnail-title"></span></a><a class="w-gallery-tnail order_4 animate_reveal" href="resources/atv4.png" title="atv4" style="position: absolute; left: 572px; top: 356px;"><img width="600" height="371" src="resources/atv4-600x371.png" class="w-gallery-tnail-img" alt="atv4"><span class="w-gallery-tnail-title"></span></a></div> </div>
 
-<h2 style="margin-top:1em;">Rediscover your content</h2>
-<p>Emby for Fire TV also uses the power of the server to help you find movies to watch for the first time or over and over.</p>
-<p><img src="resources/5537f8e644beb_ftvsuggested.png"></p>
-<h2 style="margin-top:1em;">The next of a new generation</h2>
-<p>The new Emby for Fire TV app is another in our new generation of more intelligent apps for all your devices. Designed more like the web client and fantastic Windows 8.1 and Win Phone apps, the Emby for Fire TV app continues our commitment to make Emby the absolute best solution for your personal media collection.</p>
-<p><img src="resources/atv6.png"></p>
 
 		</div> 
 	</div> </div></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
@@ -247,7 +239,7 @@
 	
 </div>
 <!-- /FOOTER -->
-<a class="w-toplink" href="emby-for-android-tv.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
+<a class="w-toplink" href="emby-for-appletv.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
 <script type="text/javascript">
 	if (window.$us === undefined) window.$us = {};
 	$us.canvasOptions = ($us.canvasOptions || {});
