--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -186,10 +186,10 @@
 		<div class="wpb_wrapper">
 			
 <h2>Installation Instructions</h2>
-<p>– Download the <a href="http://embydata.com/downloads/addons/xbmb3c/kodi-repo/repository.emby.kodi-1.0.3.zip">repository.</a><br>
-– Install using System -&gt; Add-ons -&gt; Install from zip file<br>
-– Install the Kodi add-on from the repository<br>
-– Install your skin of choice from the Kodi repository</p>
+<p>– Open the Kodi file manager<br>
+– Add a source with the name Emby and url http://kodi.emby.media<br>
+– Navigate to System -> Add-ons -> Install from zip<br>
+– Install the emby.kodi repository and you're done!</p>
 
 		</div> 
 	</div> 
