--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -186,10 +186,14 @@
 		<div class="wpb_wrapper">
 			
 <h2>Installation Instructions</h2>
-<p>– Open the Kodi file manager<br>
-– Add a source with the name Emby and url http://kodi.emby.media<br>
-– Navigate to System -> Add-ons -> Install from zip<br>
-– Install the emby.kodi repository and you're done!</p>
+<p>Open the Kodi file manager:<br>
+<img src="resources/kodiinstall1.png" /></p>
+
+<p>Add a source with the name Emby and url http://kodi.emby.media:<br>
+<img src="resources/kodiinstall2.png" /><img src="resources/kodiinstall3.png" /></p>
+
+<p>Navigate to System -> Add-ons -> Install from zip. Install the emby.kodi repository and you're done!<br>
+<img src="resources/kodiinstall4.png" /><img src="resources/kodiinstall5.png" /></p>
 
 		</div> 
 	</div> 
