--- a/src/emby-for-android-mobile.html
+++ b/src/emby-for-android-mobile.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0053)emby-for-android-mobile.html -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby for Android - Emby</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
+    {SOCIALNETWORKS}
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
     <style id="rs-plugin-settings-inline-css" type="text/css">
         .tp-caption a {
@@ -468,13 +469,13 @@
                                     <div>
                                         <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/android-googlex86-release.apk">x86</a>
                                     </div>
-									<br/>
-									<div>
-<span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20Mobile" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
-</div>
-<div>
-<span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
-</div>
+                                    <br />
+                                    <div>
+                                        <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/Wiki/wiki/Android%20Mobile" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
+                                    </div>
+                                    <div>
+                                        <span class="wpb_button align_left"><a href="http://emby.media/community/index.php?/forum/93-android-mobile/" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-info-circle"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
