--- a/src/emby-web-client.html
+++ b/src/emby-web-client.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0045)https://emby.media/downloads/emby-web-client/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Web Client - Emby</title>
     <meta name="description" content="Emby Web App - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
