--- a/src/support.html
+++ b/src/support.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0027)https://emby.media/support/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Support - Emby</title>
     <meta name="description" content="Emby Support, Wiki and Social Media, Twitter, Facebook, Google+, Github, and more.">
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 
