--- a/src/terms.html
+++ b/src/terms.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0025)https://emby.media/terms/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Terms of Service</title>
     <meta name="description" content="Emby Terms of Service">
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
