--- a/src/blogpost.html
+++ b/src/blogpost.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
-<html class="no-touch js csstransitions" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch js csstransitions" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>{{articleTitle}}</title>
     <meta name="description" content="{{metaDescription}}">
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
