--- a/src/download.html
+++ b/src/download.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0028)https://emby.media/download/ -->
-<html class="no-touch js csstransitions" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch js csstransitions" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
     <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
+    {SOCIALNETWORKS}
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
     <style id="rs-plugin-settings-inline-css" type="text/css">
         .tp-caption a {
