--- a/src/emby-theater-xboxone.html
+++ b/src/emby-theater-xboxone.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0042)emby-theater.html -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Theater for Xbox One- Emby</title>
     <meta name="description" content="Emby for Xbox One - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
     <style id="rs-plugin-settings-inline-css" type="text/css">
         .tp-caption a {
