--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0044)https://emby.media/downloads/freebsd-server/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for FreeBSD - Emby</title>
     <meta name="description" content="Emby Server for FreeBSD - Organize and stream your personal videos, music, photos and Live TV to any device.">
-
+    {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
