--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0019)https://emby.media/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby - The open media solution</title>
-    <meta name="description" content="Emby - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
+    {SOCIALNETWORKS}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
