--- a/src/premiere.html
+++ b/src/premiere.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0028)https://emby.media/premiere/ -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Premiere - Emby</title>
     <meta name="description" content="Emby Premiere premium features">
+    {SOCIALNETWORKS}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
