--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <!-- saved from url=(0040)mac-server.html -->
-<html class="no-touch" lang="en-US">
+<html itemscope itemtype="http://schema.org/Article" class="no-touch" lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for Windows</title>
     <meta name="description" content="Emby Server for Windows - Organize and stream your personal videos, music, photos and Live TV to any device.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    {SOCIALNETWORKS}
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
     <style id="rs-plugin-settings-inline-css" type="text/css">
         .tp-caption a {
