--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -505,7 +505,7 @@
 
                                                     <p>
                                                         <strong>Installation</strong><br>
-                                                        Install Emby Server for QNAP by downloading from the <a target="_blank" href="http://forum.qnap.com/viewtopic.php?t=109476">QNAP Community.</a>.
+                                                        Install Emby Server for QNAP by downloading from the <a target="_blank" href="https://forum.qnap.com/viewtopic.php?f=320&t=109476">QNAP Community.</a>.
                                                     </p>
                                                     <div><strong>Run Setup Wizard</strong></div>
                                                     <p>Start Emby from the QNAP web interface, then visit http://localhost:8096 to run the Emby setup wizard.</p>
