--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -457,7 +457,7 @@
                                         </p>
                                         <h2 style="margin-top:0;">Portable Installation</h2>
                                         <p>
-                                            - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48130" target="_blank">Microsoft .NET Framework 4.6</a>
+                                            - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48130" target="_blank">Microsoft .NET Framework 4.6</a> (already included with Windows 10).
                                             <br />- Download and unzip <a href="https://github.com/MediaBrowser/Emby/releases/latest" target="_blank">emby.windows.zip from the latest Github release.</a>
                                             <br />- Run MediaBrowser.ServerApplication.exe from within the System sub-folder
                                             <br />- Run the Emby Server setup wizard by visiting http://localhost:8096
