--- a/src/premiere.html
+++ b/src/premiere.html
@@ -438,12 +438,26 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
+                        <h2 style="color: red">End of Summer Sale! Lifetime for just $79.99 for a limited time only</h2>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                     </div>
                 </div>
             </div>
             <div class="l-submain wpb_row">
                 <div class="l-submain-h g-html i-cf" style="padding-top:40px;">
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="full-width">
+                            <div class="wpb_text_column ">
+                                <div class="wpb_wrapper">
+
+                                    <h1 style="text-align: center;">License Options</h1>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Row Backgrounds -->
                     <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
@@ -541,7 +555,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $99.99/One-time<br>
+                                            <span style="color:red">SALE </span><span style="text-decoration: line-through">$99.99</span> $79.99/One-time<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -550,13 +564,13 @@
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9999" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="7999" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSupporter" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="9999" />
+                                                        <input name="amount" type="hidden" value="7999" />
                                                     </form>
                                                 </div>
                                             </div>
@@ -564,6 +578,26 @@
                                     </div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
+                        </div>
+                    </div>
+
+                    <!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide"></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="full-width"></div>
+                    <div class="wpb_text_column ">
+                        <div class="wpb_wrapper">
+                            <p style="text-align: center;">
+                                Purchasing any option above is an acceptance of the <a href="premiereterms.html">Emby Premiere Terms of Service</a>.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Row Backgrounds -->
+                    <div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div>
+                    <div class="g-cols wpb_row offset_wide">
+                        <div class="full-width">
+                            <div class="g-hr type_fullwidth size_small no_icon">
+                                <span class="g-hr-h">
+                                    <i class="fa fa-"></i>
+                                </span>
+                            </div>
                         </div>
                     </div>
 
@@ -780,6 +814,7 @@
                                 <div class="wpb_wrapper">
 
                                     <h1 style="text-align: center;">License Options</h1>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -859,19 +894,19 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Lifetime</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            $99.99/One-time<br>
+                                            <span style="color:red">SALE </span><span style="text-decoration: line-through">$99.99</span> $79.99/One-time<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9999" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="7999" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSupporter" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="9999" />
+                                                        <input name="amount" type="hidden" value="7999" />
                                                     </form>
                                                 </div>
                                             </div>
@@ -880,11 +915,12 @@
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
-                    </div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide"></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="full-width"></div>
+                    </div>
+                    <!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="30" data-parallax-content="" data-parallax-content-sense="30" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide"></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="full-width"></div>
                     <div class="wpb_text_column ">
                         <div class="wpb_wrapper">
                             <p style="text-align: center;">
-                                <a href="premiereterms.html">Emby Premiere Terms of Service</a>.
+                                Purchasing any option above is an acceptance of the <a href="premiereterms.html">Emby Premiere Terms of Service</a>.
                             </p>
                         </div>
                     </div>
