--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -465,9 +465,14 @@
                                     </p>
                                 </div>
                             </div>
-                            <h2>Download</h2>
+                            <h2 style="margin-top: 0; padding-top: 0;">Download</h2>
                             <div>
-                                <p>Emby for Samsung Smart TV’s is a community app that is available for download and installation on your Samsung Smart TV.</p>
+                                <p>Emby is available for download and installation on your Samsung Smart TV.</p>
+                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2016 Models</div>
+                                <p>Run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a></p>
+                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2015 Models</div>
+                                <p>Users in the USA can install Emby in Samsung App Store.</p>
+                                <p>All other users can run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a></p>
                                 <div>
                                     <span class="wpb_button align_left"><a href="https://emby.media/community/index.php?/topic/9869-samsung-smart-tv-app-install-instructions/?p=277344" target="_blank" class="g-btn color_primary type_raised"><span>2014 H-Series</span><span class="ripple-container"></span></a></span>
                                 </div>
