Sale final days

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -438,7 +438,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
-                        <h2 style="color: red">End of Summer Sale! Lifetime for just $79.99 for a limited time only</h2>
+                        <h2 style="color: red">End of Summer Sale! Lifetime for just $79.99 - FINAL DAYS</h2>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                     </div>
                 </div>
