--- a/src/download.html
+++ b/src/download.html
@@ -815,8 +815,8 @@
                                         </div>
                                     </div><div class="w-portfolio-item order_4 mobile-apps animate_reveal">
                                         <div class="w-portfolio-item-h">
-                                            <a class="w-portfolio-item-anchor" target="_blank" href="http://apps.microsoft.com/windows/en-us/app/media-browser/ad55a2f0-9897-47bd-8944-bed3aefd5d06">
-                                                <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/270-600x600.jpg" class="w-portfolio-item-image-first wp-post-image" alt="270">	</div>
+                                            <a class="w-portfolio-item-anchor" target="_blank" href="emby-theater-xboxone.html">
+                                                <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/windows10.png" class="w-portfolio-item-image-first wp-post-image" alt="270">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby for Windows 8.1</h2>
@@ -829,7 +829,7 @@
                                         </div>
                                     </div><div class="w-portfolio-item order_5 mobile-apps animate_reveal">
                                         <div class="w-portfolio-item-h">
-                                            <a class="w-portfolio-item-anchor" target="_blank" href="http://www.windowsphone.com/s?appid=f4971ed9-f651-4bf6-84bb-94fd98613b86">
+                                            <a class="w-portfolio-item-anchor" target="_blank" href="emby-theater-xboxone.html">
                                                 <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/windowsphone-600x600.png" class="w-portfolio-item-image-first wp-post-image" alt="windowsphone">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
