--- a/src/emby-theater-xboxone.html
+++ b/src/emby-theater-xboxone.html
@@ -436,7 +436,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby Theater</h1>
-                        <p>for Xbox One.</p>								<div class="w-pagehead-nav">
+                        <p>for Windows 10 Universal.</p>								<div class="w-pagehead-nav">
                             <div class="w-pagehead-nav-h">
                                 <a class="w-pagehead-nav-item type_prev" href="nas-server.html" title="Emby Server for NAS"><i class="mdfi_navigation_chevron_left"></i></a>
                                 <a class="w-pagehead-nav-item type_next" href="mac-server.html" title="Emby Server for Mac"><i class="mdfi_navigation_chevron_right"></i></a>
@@ -454,8 +454,12 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
 
-                                    <h2>Try It Now</h2>
-                                    <p>Just open the Microsoft Edge browser on your Xbox One and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.</p>
+                                    <h2>Download Now</h2>
+                                    <p>Install in the <a href="https://www.microsoft.com/en-us/store/p/emby-theater/9nblggh4t70l" target="_blank">Microsoft Windows Store</a>.</p>
+                                    <p style="margin-top:2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.</p>
+
+                                    <h2>Also Runs in Your Browser</h2>
+                                    <p>Just open your web browser and visit <a href="http://tv.emby.media" target="_blank">tv.emby.media</a>.</p>
                                     <p>Turn Emby Theater into an app by adding it to your home screen. Emby Theater supports your Xbox One game controller for easy navigation.</p>
                                     <p style="margin-top:2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.</p>
                                 </div>
