--- a/src/download.html
+++ b/src/download.html
@@ -815,7 +815,7 @@
                                         </div>
                                     </div><div class="w-portfolio-item order_4 mobile-apps animate_reveal">
                                         <div class="w-portfolio-item-h">
-                                            <a class="w-portfolio-item-anchor" target="_blank" href="emby-theater-xboxone.html">
+                                            <a class="w-portfolio-item-anchor" href="emby-theater-xboxone.html">
                                                 <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/windows10.png" class="w-portfolio-item-image-first wp-post-image" alt="270">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
@@ -829,7 +829,7 @@
                                         </div>
                                     </div><div class="w-portfolio-item order_5 mobile-apps animate_reveal">
                                         <div class="w-portfolio-item-h">
-                                            <a class="w-portfolio-item-anchor" target="_blank" href="emby-theater-xboxone.html">
+                                            <a class="w-portfolio-item-anchor" href="emby-theater-xboxone.html">
                                                 <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/windowsphone-600x600.png" class="w-portfolio-item-image-first wp-post-image" alt="windowsphone">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
