--- a/src/emby-theater.html
+++ b/src/emby-theater.html
@@ -466,7 +466,7 @@
 
                                     <h2>Download</h2>
                                     <p>Emby Theater is available for Windows 7, 8, 10 and Vista.</p>
-                                    <span class="wpb_button align_left"><a href="http://emby.media/emby/theater/release/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="http://embydata.com/downloads/theater/release/setup.exe" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download</span><span class="ripple-container"></span></a></span>
 
                                     <p style="margin-top:2em;">Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.</p>
                                     <p style="margin-top:2em;">The <a target="_blank" href="https://emby.media/community/index.php?/topic/29908-previous-version/">legacy version is available for download</a> and is completely free.</p>
