--- a/src/windows-server.html
+++ b/src/windows-server.html
@@ -446,9 +446,9 @@
                                         <h2>Download</h2>
                                         <p>
                                             <div>
-                                                <a href="http://emby.media/emby/server/release/setup.exe" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a>
+                                                <a href="http://embydata.com/downloads/server/release/setup.exe" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Stable Release</span><span class="ripple-container"></span></a>
                                             </div>
-                                            <br /><a href="http://emby.media/emby/server/beta/setup.exe">Beta Channel</a>
+                                            <br /><a href="http://embydata.com/downloads/server/beta/setup.exe">Beta Channel</a>
                                             <br /><a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/Server/windows/dev/setup.exe">Dev Channel (Unstable)</a>
                                         </p>
                                         <p style="margin-bottom:0;">
@@ -457,7 +457,7 @@
                                         </p>
                                         <h2 style="margin-top:0;">Portable Installation</h2>
                                         <p>
-                                            - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48130" target="_blank">Microsoft .NET Framework 4.6</a> (already included with Windows 10).
+                                            - Download and install the <a href="https://www.microsoft.com/en-us/download/details.aspx?id=53344" target="_blank">Microsoft .NET Framework 4.62</a> (already included with Windows 10).
                                             <br />- Download and unzip <a href="https://github.com/MediaBrowser/Emby/releases/latest" target="_blank">emby.windows.zip from the latest Github release.</a>
                                             <br />- Run MediaBrowser.ServerApplication.exe from within the System sub-folder
                                             <br />- Run the Emby Server setup wizard by visiting http://localhost:8096
