update samsung instructions

--- a/src/emby-for-samsung-smart-tv.html
+++ b/src/emby-for-samsung-smart-tv.html
@@ -468,9 +468,7 @@
                             <h2 style="margin-top: 0; padding-top: 0;">Download</h2>
                             <div>
                                 <p>Emby is available for download and installation on your Samsung Smart TV.</p>
-                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2016 Models</div>
-                                <p>Run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a></p>
-                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2015 Models</div>
+                                <div style="margin-top: 0; padding-top: 0; font-weight: bold;">2015 & 2016 Models</div>
                                 <p>Users in the USA can install Emby in Samsung App Store.</p>
                                 <p>All other users can run Emby using the Tizen Web Browser and opening <a href="http://tv.emby.media" target="_blank">http://tv.emby.media</a></p>
                                 <div>
