--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -604,17 +604,15 @@
 
                                                     <p style="font-weight: bold;margin-bottom: 8px;">Introduction</p>
 
-                                                    <p style="margin-bottom: 0px;">If you have an Intel or Marvell based Synology NAS, an Emby supported package is now available!</p>
+                                                    <p style="margin-bottom: 0px;">If you have an Intel, Marvell or ST Microelectronics based Synology NAS, an Emby supported package is now available!</p>
 
-                                                    <p style="margin-bottom: 8px;">* <span style="font-style: italic;">Not sure what type of processor your Synology box has?</span> Click <a href="https://github.com/MediaBrowser/Wiki/wiki/Synology-:-Summary-of-Models-by-Processor" target="_blank">here</a>!</p>
+                                                    <p style="margin-bottom: 8px;"><span style="font-style: italic;">Not sure what type of processor your Synology box has?</span> Click <a href="https://github.com/MediaBrowser/Wiki/wiki/Synology-:-Summary-of-Models-by-Processor" target="_blank">here</a>!</p>
 
                                                     <p style="margin-bottom: 0px;font-size: 12px;">Pre-release packages are available for the following platforms, if you would like to get access, let us know <a href="http://emby.media/community/index.php?/topic/34866-synology-package-in-development-pre-release-testers-wanted/" target="_blank" >here</a>.</p>
 
                                                     <p style="margin-bottom: 0px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;Annapurna Labs: DS416, DS215+, DS715, DS1515, DS2015xs</p>
 
-                                                    <p style="margin-bottom: 0px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;MACOM: DS414j</p>
-
-                                                    <p style="margin-bottom: 4px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;ST Microelectronics: DS216play</p>
+                                                    <p style="margin-bottom: 4px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;MACOM: DS414j</p>
                                                                                                         
                                                     <p style="font-weight: bold;margin-bottom: 8px;">Setup</p>
 
@@ -627,6 +625,8 @@
                                                         <p style="margin-bottom: 8px;">Package Center -> Settings -> Package Sources</p>
 
                                                         <img style="width: 701px;" src="resources/Synology-Setup-Step-1.png" />
+
+                                                        <p style="margin-bottom: 8px;"><span style="font-weight: bold;">*</span> <span style="font-style: italic;">XPEnology users, please use https://synology.emby.media/?package_repository=360efc6e-de72-4073-b603-2bfbd7001586</span></p>
 
                                                     </div>
 
