--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -604,16 +604,12 @@
 
                                                     <p style="font-weight: bold;margin-bottom: 8px;">Introduction</p>
 
-                                                    <p style="margin-bottom: 0px;">If you have an Intel, Marvell or ST Microelectronics based Synology NAS, an Emby supported package is now available!</p>
+                                                    <p style="margin-bottom: 0px;">An Emby supported package is now available for all Synology* (and XPEnology) platforms!</p>
 
-                                                    <p style="margin-bottom: 8px;"><span style="font-style: italic;">Not sure what type of processor your Synology box has?</span> Click <a href="https://github.com/MediaBrowser/Wiki/wiki/Synology-:-Summary-of-Models-by-Processor" target="_blank">here</a>!</p>
+                                                    <p style="margin-bottom: 0px;">The package is supported on systems running DSM 5.2-5967 or later.</p>
 
-                                                    <p style="margin-bottom: 0px;font-size: 12px;">Pre-release packages are available for the following platforms, if you would like to get access, let us know <a href="http://emby.media/community/index.php?/topic/34866-synology-package-in-development-pre-release-testers-wanted/" target="_blank" >here</a>.</p>
+                                                    <p style="margin-bottom: 4px;font-size: 12px;font-style: italic;">* Support for QorIQ based machines (DS213+, DS413) is not currently possible.</p>
 
-                                                    <p style="margin-bottom: 0px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;Annapurna Labs: DS416, DS215+, DS715, DS1515, DS2015xs</p>
-
-                                                    <p style="margin-bottom: 4px;font-size: 12px;">&nbsp;&nbsp;&nbsp;&nbsp;MACOM: DS414j</p>
-                                                                                                        
                                                     <p style="font-weight: bold;margin-bottom: 8px;">Setup</p>
 
                                                     <p style="margin-bottom: 8px;"> There are a few things you need to do to get started, but it's pretty quick and easy to get going:-</p>
