--- a/src/pin.html
+++ b/src/pin.html
@@ -195,8 +195,7 @@
 	</p></form>
 </div>
 <p><script src="resources/jquery-2.1.3.min.js"></script><br>
-<script src="resources/md5.js"></script><br>
-<script src="resources/embyconnect.js"></script></p>
+<script src="resources/embyconnectpin.js"></script></p>
 </div>
 		</div></div>
 </div></div><!-- Row Backgrounds --><div class="upb_no_bg" data-fadeout="" data-fadeout-percentage="" data-parallax-content="" data-parallax-content-sense="" data-row-effect-mobile-disable="true" data-img-parallax-mobile-disable="true" data-rtl="false" data-custom-vc-row="" data-vc="4.5.2" data-theme-support=""></div><div class="g-cols wpb_row offset_wide"><div class="full-width">
