--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -622,7 +622,7 @@
 
                                                         <img style="width: 701px;" src="resources/Synology-Setup-Step-1.png" />
 
-                                                        <p style="margin-bottom: 8px;"><span style="font-weight: bold;">*</span> <span style="font-style: italic;">XPEnology users, please use https://synology.emby.media/?package_repository=360efc6e-de72-4073-b603-2bfbd7001586</span></p>
+                                                        <p style="margin-bottom: 8px;"><span style="font-weight: bold;">*</span> <span style="font-style: italic;">XPEnology users, please use https://synology.emby.media/?package_repository=360efc6e-de72-4073-b603-2bfbd7001586 and make sure you take a look at the <a href="https://emby.media/community/index.php?/topic/40411-xpenology-users-read-me/" target="_blank">XPEnology Users Read Me</a>.</span></p>                                                       
 
                                                     </div>
 
