Cyber weekend sale

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -438,6 +438,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
+                        <h2 style="color:red">Cyber Weekend SALE - One Year 20% off</h2>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                     </div>
                 </div>
@@ -515,7 +516,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $49.99/1 Year<br>
+                                            <span style="text-decoration:line-through">$49.99</span> <span style="color:red">$39.99</span>/1 Year<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -524,13 +525,13 @@
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NFLELQAGKKFKQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Yearly" data-amount="4999" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Yearly" data-amount="3999" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSClubYearly" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="4999" />
+                                                        <input name="amount" type="hidden" value="3999" />
                                                     </form>
                                                 </div>
                                             </div>
@@ -862,19 +863,19 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">1 Year</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            $49.99/1 Year<br>
+                                            <span style="text-decoration:line-through">$49.99</span> <span style="color:red">$39.99</span>/1 Year<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NFLELQAGKKFKQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Yearly" data-amount="4999" data-locale="auto" data-zip-code="true">
+                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Yearly" data-amount="3999" data-locale="auto" data-zip-code="true">
                                                             // <![CDATA[
 
                                                             // ]]></script>
                                                         <input name="feature" type="hidden" value="MBSClubYearly" />
                                                         <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="4999" />
+                                                        <input name="amount" type="hidden" value="3999" />
                                                     </form>
                                                 </div>
                                             </div>
