--- a/src/download.html
+++ b/src/download.html
@@ -267,13 +267,27 @@
         }
 
         .l-submain-h {
-            max-width: 1400px !important;
+            max-width: initial !important;
         }
 
         @media all and (min-width: 1400px) {
 
             .w-portfolio.columns_5 .w-portfolio-item {
                 width: 16.666666666666666666666666666667% !important;
+            }
+        }
+
+        @media all and (min-width: 1600px) {
+
+            .w-portfolio.columns_5 .w-portfolio-item {
+                width: 14.285714285714285714285714285714% !important;
+            }
+        }
+
+        @media all and (min-width: 1920px) {
+
+            .w-portfolio.columns_5 .w-portfolio-item {
+                width: 12.5% !important;
             }
         }
     </style>
@@ -694,6 +708,21 @@
                                             <span class="ripple-container"></span>
                                         </div>
                                     </div>
+                                    <div class="w-portfolio-item order_9 tv-apps" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="emby-ps4.html">
+                                                <div class="w-portfolio-item-image"><img width="336" height="336" src="resources/ps4.png" class="w-portfolio-item-image-first wp-post-image" alt="kodi">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby for Sony PlayStation 4 PS4</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
                                     <div class="w-portfolio-item order_7 tv-apps" style="opacity: 1;">
                                         <div class="w-portfolio-item-h">
                                             <a class="w-portfolio-item-anchor" href="emby-theater-xboxone.html">
@@ -746,6 +775,21 @@
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
                                                         <h2 class="w-portfolio-item-title">Emby for Kodi</h2>
+                                                        <span class="w-portfolio-item-arrow"></span>
+                                                        <span class="w-portfolio-item-text"></span>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <span class="ripple-container"></span>
+                                        </div>
+                                    </div>
+                                    <div class="w-portfolio-item order_9 tv-apps" style="opacity: 1;">
+                                        <div class="w-portfolio-item-h">
+                                            <a class="w-portfolio-item-anchor" href="emby-ps3.html">
+                                                <div class="w-portfolio-item-image"><img width="336" height="336" src="resources/ps3.png" class="w-portfolio-item-image-first wp-post-image" alt="kodi">	</div>
+                                                <div class="w-portfolio-item-meta">
+                                                    <div class="w-portfolio-item-meta-h">
+                                                        <h2 class="w-portfolio-item-title">Emby for Sony PlayStation 3 PS3</h2>
                                                         <span class="w-portfolio-item-arrow"></span>
                                                         <span class="w-portfolio-item-text"></span>
                                                     </div>
